Befroe SDK 54 upgrade - worked on image posting system with SDK 52

--- a/app.json
+++ b/app.json
@@ -28,7 +28,14 @@
     },
     "plugins": [
       "expo-asset",
-      "expo-font"
+      "expo-font",
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "이 앱은 옷 사진을 업로드하기 위해 갤러리 접근이 필요합니다.",
+          "cameraPermission": "이 앱은 옷 사진을 촬영하기 위해 카메라 접근이 필요합니다."
+        }
+      ]
     ]
   }
 }
