--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-asset": "~11.0.5",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
+    "expo-image-picker": "~16.0.6",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
