--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "cleanup": "node scripts/cleanup-orphaned-images.js"
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
@@ -18,8 +19,10 @@
     "expo-asset": "~12.0.9",
     "expo-constants": "~18.0.0",
     "expo-font": "~14.0.0",
+    "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.0",
     "expo-status-bar": "~3.0.0",
+    "firebase": "^12.4.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -32,6 +35,9 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.1.0",
+    "cloudinary": "^2.8.0",
+    "firebase-admin": "^13.5.0",
+    "react-native-dotenv": "^3.4.11",
     "typescript": "~5.9.2"
   },
   "private": true
