Gemini 2.5 API used (AI recommendation system constructed)

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ FIREBASE_MEASUREMENT_ID=your_measurement_id
 # Cloudinary Dashboard에서 확인
 CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_UPLOAD_PRESET=your_upload_preset
+
+# Gemini AI Config (무료)
+# https://aistudio.google.com/apikey 에서 API 키 생성
+GEMINI_API_KEY=your_gemini_api_key
