Gemini 2.5 flash added (AI reccomendation system construced)
Need minor update for design and  weather API so that AI can recommend outfit based on weather

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
+    "@google/generative-ai": "^0.24.1",
+    "@react-native-community/slider": "^5.1.0",
     "@react-navigation/bottom-tabs": "^7.5.0",
     "@react-navigation/drawer": "^7.6.0",
     "@react-navigation/native": "^7.1.18",
@@ -18,6 +20,7 @@
     "expo": "~54.0.0",
     "expo-asset": "~12.0.9",
     "expo-constants": "~18.0.0",
+    "expo-file-system": "^19.0.17",
     "expo-font": "~14.0.0",
     "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.0",
