--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ CLOUDINARY_UPLOAD_PRESET=your_upload_preset
 # Gemini AI Config (무료)
 # https://aistudio.google.com/apikey 에서 API 키 생성
 GEMINI_API_KEY=your_gemini_api_key
+
+# OpenWeatherMap API Config (무료)
+# https://openweathermap.org/api 에서 API 키 생성
+OPENWEATHER_API_KEY=your_openweather_api_key
