--- a/app.json
+++ b/app.json
@@ -13,13 +13,20 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "이 앱은 현재 위치 기반 날씨 정보를 제공하기 위해 위치 정보가 필요합니다."
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "permissions": [
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_FINE_LOCATION"
+      ],
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
     },
@@ -34,6 +41,12 @@
         {
           "photosPermission": "이 앱은 옷 사진을 업로드하기 위해 갤러리 접근이 필요합니다.",
           "cameraPermission": "이 앱은 옷 사진을 촬영하기 위해 카메라 접근이 필요합니다."
+        }
+      ],
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "이 앱은 현재 위치 기반 날씨 정보를 제공하기 위해 위치 정보가 필요합니다."
         }
       ]
     ]
