--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-font": "~14.0.0",
     "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.0",
+    "expo-location": "^19.0.7",
     "expo-status-bar": "~3.0.0",
     "firebase": "^12.4.0",
     "react": "19.1.0",
