Auto Claudinary image delete function removed / use firebase auth, set up login / singup system. + Eng Ver README added
Plan: change desing of landing and login singup pages.

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ FIREBASE_STORAGE_BUCKET=your_project.firebasestorage.app
 FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 FIREBASE_APP_ID=your_app_id
 FIREBASE_MEASUREMENT_ID=your_measurement_id
+FIREBASE_WEB_CLIENT_ID=your_web_client_id_here
 
 # Cloudinary Config
 # Cloudinary Dashboard에서 확인
