--- a/package.json
+++ b/package.json
@@ -4,29 +4,39 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "cleanup": "node scripts/cleanup-orphaned-images.js"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web"
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
+    "@expo/vector-icons": "^15.0.3",
     "@google/generative-ai": "^0.24.1",
-    "@react-native-community/slider": "^5.1.0",
+    "@react-native-community/blur": "^4.4.1",
+    "@react-native-community/slider": "~5.0.1",
+    "@react-native-firebase/app": "^23.5.0",
+    "@react-native-firebase/auth": "^23.5.0",
+    "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-navigation/bottom-tabs": "^7.5.0",
     "@react-navigation/drawer": "^7.6.0",
-    "@react-navigation/native": "^7.1.18",
-    "@react-navigation/native-stack": "^7.5.1",
-    "expo": "~54.0.0",
+    "@react-navigation/native": "^7.1.19",
+    "@react-navigation/native-stack": "^7.6.2",
+    "expo": "^54.0.22",
     "expo-asset": "~12.0.9",
+    "expo-blur": "~15.0.7",
+    "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.0",
     "expo-file-system": "^19.0.17",
     "expo-font": "~14.0.0",
     "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.0",
+    "expo-linear-gradient": "~15.0.7",
     "expo-location": "^19.0.7",
     "expo-status-bar": "~3.0.0",
+    "expo-system-ui": "~6.0.8",
     "firebase": "^12.4.0",
+    "lucide-react-native": "^0.552.0",
+    "moti": "^0.30.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -34,6 +44,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.12.1",
     "react-native-web": "~0.21.0"
   },
   "devDependencies": {
