removed all the web realted  codes.
Changed README.

Updated UI desgin for landing/singup/loging pages

Plan: Translation (Kr and EN) and night mode?

--- a/app.json
+++ b/app.json
@@ -6,7 +6,6 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
@@ -14,15 +13,9 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.OutfitFlow.firebase",
-      "googleServicesFile": "./GoogleService-Info.plist",
+      "bundleIdentifier": "com.OutfitFlow.app",
       "infoPlist": {
         "NSLocationWhenInUseUsageDescription": "이 앱은 현재 위치 기반 날씨 정보를 제공하기 위해 위치 정보가 필요합니다."
-      },
-      "config": {
-        "googleSignIn": {
-          "reservedClientId": "com.googleusercontent.apps.504972635537-a621tgqcpahvhfs78a5srpekvod5hc1c"
-        }
       }
     },
     "android": {
@@ -30,11 +23,8 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.OutfitFlow.firebase",
-      "googleServicesFile": "./google-services.json",
-      "permissions": ["ACCESS_COARSE_LOCATION", "ACCESS_FINE_LOCATION"],
-      "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "package": "com.OutfitFlow.app",
+      "permissions": ["ACCESS_COARSE_LOCATION", "ACCESS_FINE_LOCATION"]
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -42,17 +32,6 @@
     "plugins": [
       "expo-asset",
       "expo-font",
-      "@react-native-firebase/app",
-      "@react-native-firebase/auth",
-      "@react-native-google-signin/google-signin",
-      [
-        "expo-build-properties",
-        {
-          "ios": {
-            "useFrameworks": "static"
-          }
-        }
-      ],
       [
         "expo-image-picker",
         {
@@ -66,6 +45,7 @@
           "locationAlwaysAndWhenInUsePermission": "이 앱은 현재 위치 기반 날씨 정보를 제공하기 위해 위치 정보가 필요합니다."
         }
       ]
-    ]
+    ],
+    "scheme": "outfitflow"
   }
 }
