--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "prebuild": "expo prebuild"
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
@@ -14,18 +14,18 @@
     "@google/generative-ai": "^0.24.1",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/slider": "~5.0.1",
-    "@react-native-firebase/app": "^23.5.0",
-    "@react-native-firebase/auth": "^23.5.0",
-    "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-navigation/bottom-tabs": "^7.5.0",
     "@react-navigation/drawer": "^7.6.0",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.2",
+    "@react-navigation/stack": "^7.6.2",
     "expo": "^54.0.22",
     "expo-asset": "~12.0.9",
+    "expo-auth-session": "^7.0.8",
     "expo-blur": "~15.0.7",
     "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.0",
+    "expo-crypto": "^15.0.7",
     "expo-file-system": "^19.0.17",
     "expo-font": "~14.0.0",
     "expo-image-manipulator": "~14.0.7",
@@ -34,6 +34,7 @@
     "expo-location": "^19.0.7",
     "expo-status-bar": "~3.0.0",
     "expo-system-ui": "~6.0.8",
+    "expo-web-browser": "^15.0.9",
     "firebase": "^12.4.0",
     "lucide-react-native": "^0.552.0",
     "moti": "^0.30.0",
