--- a/package.json
+++ b/package.json
@@ -3,15 +3,13 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "prebuild": "expo prebuild"
+    "start": "expo start"
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.3",
     "@google/generative-ai": "^0.24.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/slider": "~5.0.1",
     "@react-navigation/bottom-tabs": "^7.5.0",
@@ -19,11 +17,10 @@
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.2",
     "@react-navigation/stack": "^7.6.2",
-    "expo": "^54.0.22",
+    "expo": "^54.0.23",
     "expo-asset": "~12.0.9",
     "expo-auth-session": "^7.0.8",
     "expo-blur": "~15.0.7",
-    "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.0",
     "expo-crypto": "^15.0.7",
     "expo-file-system": "^19.0.17",
@@ -46,7 +43,9 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.12.1",
-    "react-native-web": "~0.21.0"
+    "react-native-toast-message": "^2.3.3",
+    "react-native-web": "~0.21.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
