Language EN KR setting and UI updated

--- a/app.json
+++ b/app.json
@@ -38,7 +38,8 @@
         {
           "locationAlwaysAndWhenInUsePermission": "이 앱은 현재 위치 기반 날씨 정보를 제공하기 위해 위치 정보가 필요합니다."
         }
-      ]
+      ],
+      "expo-localization"
     ]
   }
 }
