--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/slider": "~5.0.1",
+    "@react-native-google-signin/google-signin": "^16.1.1",
     "@react-navigation/bottom-tabs": "^7.5.0",
     "@react-navigation/drawer": "^7.6.0",
     "@react-navigation/native": "^7.1.19",
@@ -53,6 +54,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.1.0",
+    "baseline-browser-mapping": "^2.9.18",
     "cloudinary": "^2.8.0",
     "cross-env": "^10.1.0",
     "firebase-admin": "^13.5.0",
