--- a/app.json
+++ b/app.json
@@ -13,6 +13,7 @@
     },
     "ios": {
       "bundleIdentifier": "com.OutfitFlow.firebase",
+      "googleServicesFile": "./GoogleService-Info.plist",
       "supportsTablet": true,
       "infoPlist": {
         "CFBundleURLTypes": [
@@ -28,7 +29,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.RECORD_AUDIO",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
+      ],
+      "package": "com.OutfitFlow.firebase"
     },
     "web": {
       "favicon": "./assets/favicon.png"
