--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,12 @@ GEMINI_API_KEY=your_gemini_api_key
 # OpenWeatherMap API Config (무료)
 # https://openweathermap.org/api 에서 API 키 생성
 OPENWEATHER_API_KEY=your_openweather_api_key
+
+# Naver Shopping API Config (무료)
+# https://developers.naver.com/apps/#/register 에서 애플리케이션 등록
+# 사용 API: 검색 > 쇼핑
+NAVER_CLIENT_ID=your_naver_client_id
+NAVER_CLIENT_SECRET=your_naver_client_secret
+
+# Vercel API URL (Vercel 배포 후 설정)
+VERCEL_API_URL=https://your-app.vercel.app
