--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
+    "setup": "bash setup.sh",
     "start": "expo start --tunnel",
     "android": "expo run:android",
-    "ios": "expo run:ios"
+    "ios": "expo run:ios",
+    "deploy:api": "vercel --prod"
   },
   "dependencies": {
     "@expo/cli": "^54.0.16",
@@ -56,10 +58,12 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.1.0",
+    "@vercel/node": "^5.5.28",
     "baseline-browser-mapping": "^2.9.18",
     "cloudinary": "^2.8.0",
     "cross-env": "^10.1.0",
     "firebase-admin": "^13.5.0",
+    "firebase-tools": "^15.5.1",
     "react-native-dotenv": "^3.4.11",
     "typescript": "~5.9.2"
   },
